# Sref_Cref_Metric

./: .gitignore  README.md  benchmark_dataset.py  build_sref_cref_pairs.py  caption_gpt4o_cref_sref.py  caption_gpt4o_dual_lang.py  caption_gpt4o_recursive.py  caption_qwen3_demo_cref_sref.py  check_trigger.sh  codex_worker.sh  comfykit_demo.py  concat2seeMetric.py  content_score.py  content_score.sh  content_similarity_batches.py  content_similarity_batches.sh  content_similarity_triplet.py  content_similarity_triplet.sh  delete_json_files.py  extend_caption_with_sref.py  gpu_infer_ours.py  image_compare_web.py  qwen_infer.py  readme.md  resize_images_multiprocess.py  run_gpu_infer.sh  sources.sh  sources_l40s_yangtong.sh  stream_extract_images_from_tar.py  strem_strechting.sh  style_score.py  style_score.sh  style_similarity_batches.py  style_similarity_batches.sh  triplet_style_similarity.py  triplet_style_similarity.sh
vault/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  rlauch_vault.sh  sample.sh  sample_pics.py
vault/docs/: ID类.md  design_philosophy.md  examples常用模式总结.md  make支持功能.md  使用指南.md  新增数据源导入指南.md
vault/docs/design_guides/: immutable_dataclass_style.md
vault/docs/skills/: 标注数据分析报告制作指南.md
vault/examples/: README.md
vault/examples/agent_annotate/utils/: __init__.py  annotate.py  concurrent.py  conversation.py  executor.py  image.py  openai_client.py
vault/examples/analyze/: report_vault.py
vault/examples/annotate/: README.md  add_manual_selection_annotation.py  add_sample_annotations_tutorial.py  annotation_utils.py  quickstart_5min.py  test_sample_annotations.py
vault/examples/apps/: vault_browser.py
vault/examples/apps/copy_to_marmot/: sync.sh
vault/examples/apps/vault_in_readonly_filesystem/: README.md  fcntl_hack.c
vault/examples/export/: as_tar.py
vault/examples/ingest/: t2i_tar_to_vault.py
vault/examples/llm_annotate/: .gitignore  README.md
vault/src/vault/: __init__.py
vault/tests/: test_distributed_lance_writer.py  test_lance_taker.py
(+311 files in other folders)
